Added main variables

--- a/scss/style.css
+++ b/scss/style.css
@@ -1,1 +1,12 @@
-/* No CSS *//*# sourceMappingURL=style.css.map */
+* {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  background: #F8F8F7;
+  color: #404040;
+}
+/*# sourceMappingURL=style.css.map */
