Added Font Family

--- a/scss/style.css
+++ b/scss/style.css
@@ -8,5 +8,6 @@ body {
   padding: 0;
   background: #F8F8F7;
   color: #404040;
+  font-family: "Roboto", sans-serif;
 }
 /*# sourceMappingURL=style.css.map */
