--- a/scss/style.css
+++ b/scss/style.css
@@ -10,4 +10,37 @@ body {
   color: #404040;
   font-family: "Roboto", sans-serif;
 }
+
+.c-header {
+  background: #2176ff;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
+          box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
+}
+
+.c-header__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 0;
+}
+
+.c-header__item {
+  list-style: none;
+  margin-left: 12px;
+}
+
+.c-header__item:hover {
+  text-decoration: underline;
+}
+
+.c-header__link {
+  text-decoration: none;
+  color: white;
+}
 /*# sourceMappingURL=style.css.map */
