--- a/scss/style.scss
+++ b/scss/style.scss
@@ -32,5 +32,6 @@ body {
 }
 
 // ? <--------- COMPONENTS --------->
-@import './components/header'
+@import './components/header';
+@import './components/hero';
 // ? </--------- COMPONENTS --------->
