--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -2,6 +2,7 @@
     background: $color__accent-main;
     display: flex;
     justify-content: space-between;
+    flex: 1;
     box-shadow: $shadow;
     
     &__list {
