--- a/scss/style.css
+++ b/scss/style.css
@@ -19,6 +19,9 @@ body {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
   -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
           box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
 }
@@ -44,6 +47,10 @@ body {
   color: white;
 }
 
+.c-hero {
+  height: 70vh;
+}
+
 .c-hero__title {
   font-size: 3em;
 }
@@ -64,5 +71,25 @@ body {
   letter-spacing: 1px;
   padding: 12px 24px;
   border-radius: 2px;
+  -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
+          box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
+}
+
+.u-wrapper {
+  max-width: 1024px;
+  height: inherit;
+  margin: 0 auto;
+  padding: 0 10px;
+  display: inherit;
+  -webkit-box-pack: inherit;
+      -ms-flex-pack: inherit;
+          justify-content: inherit;
+  -webkit-box-align: inherit;
+      -ms-flex-align: inherit;
+          align-items: inherit;
+  -webkit-box-flex: inherit;
+      -ms-flex: inherit;
+          flex: inherit;
+  border: 1px solid red;
 }
 /*# sourceMappingURL=style.css.map */
