--- a/scss/style.scss
+++ b/scss/style.scss
@@ -35,3 +35,7 @@ body {
 @import './components/header';
 @import './components/hero';
 // ? </--------- COMPONENTS --------->
+
+// ? <--------- Utilities --------->
+@import './utils/wrapper'
+// ? </--------- Utilities --------->
