--- a/scss/style.css
+++ b/scss/style.css
@@ -75,6 +75,56 @@ body {
           box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
 }
 
+.c-calendar {
+  border: 1px solid black;
+  border-radius: 2px;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: auto 1fr 1fr;
+      grid-template-columns: auto 1fr 1fr;
+}
+
+.c-calendar__cell {
+  border: 1px solid black;
+  font-size: 1.3em;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding: 10px;
+  font-weight: 500;
+}
+
+.c-calendar__cell--heading {
+  background: #eeeeee;
+}
+
+.c-calendar__cell--plate {
+  font-size: 1.6em;
+}
+
+.c-calendar__cell--yellow {
+  background: #ffc107;
+}
+
+.c-calendar__cell--pink {
+  background: #ec407a;
+}
+
+.c-calendar__cell--red {
+  background: #f44336;
+}
+
+.c-calendar__cell--green {
+  background: #8bc34a;
+}
+
+.c-calendar__cell--blue {
+  background: #03a9f4;
+}
+
 .u-wrapper {
   max-width: 1024px;
   height: inherit;
