--- a/scss/style.scss
+++ b/scss/style.scss
@@ -34,6 +34,7 @@ body {
 // ? <--------- COMPONENTS --------->
 @import './components/header';
 @import './components/hero';
+@import './components/calendar';
 // ? </--------- COMPONENTS --------->
 
 // ? <--------- Utilities --------->
