--- a/scss/style.scss
+++ b/scss/style.scss
@@ -33,7 +33,9 @@ body {
 
 // ? <--------- COMPONENTS --------->
 @import './components/header';
+@import './components/cta';
 @import './components/hero';
+@import './components/heading';
 @import './components/calendar';
 // ? </--------- COMPONENTS --------->
 
