--- a/scss/components/_calendar.scss
+++ b/scss/components/_calendar.scss
@@ -1,5 +1,5 @@
 $calendar-yellow: #ffc107;
-$calendar-pink: #ec407a;
+$calendar-pink: #ff4081;
 $calendar-red: #f44336;
 $calendar-green: #8bc34a;
 $calendar-blue: #03a9f4;
@@ -8,11 +8,13 @@ $calendar-blue: #03a9f4;
     border-radius: $border-radius;
     display: grid;
     grid-template-columns: auto 1fr 1fr;
+    box-shadow: $shadow;
     &__cell {
         border: 1px solid black;
         font-size: 1.3em;
         display: flex;
         justify-content: center;
+        align-items: center;
         padding: 10px;
         font-weight: 500;
 
