--- a/scss/components/_cta.scss
+++ b/scss/components/_cta.scss
@@ -1,15 +1,25 @@
 .c-cta {
-    font-size: 1.2em;
+    font-size: 1.3em;
     box-sizing: initial;
     text-decoration: none;
     color: white;
     background: $color__accent-main;
     text-transform: uppercase;
+    font-weight: 500;
     letter-spacing: 1px;
     padding: 12px 24px;
     border-radius: $border-radius;
     box-shadow: $shadow;
     display: inline-block;
+    transition: cubic-bezier(0.215, 0.610, 0.355, 1) .3s;
+    &:hover {
+        transform: translateY(-5px);
+    }
+
+    &:active {
+        transform: translateY(5px);
+        background: darken($color__accent-main, 15%);
+    }
     &--big {
         font-size: 2em;
     }
