--- a/scss/style.css
+++ b/scss/style.css
@@ -77,19 +77,33 @@ body {
 }
 
 .c-cta {
-  font-size: 1.2em;
+  font-size: 1.3em;
   -webkit-box-sizing: initial;
           box-sizing: initial;
   text-decoration: none;
   color: white;
   background: #2176ff;
   text-transform: uppercase;
+  font-weight: 500;
   letter-spacing: 1px;
   padding: 12px 24px;
   border-radius: 2px;
   -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
           box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
   display: inline-block;
+  -webkit-transition: cubic-bezier(0.215, 0.61, 0.355, 1) 0.3s;
+  transition: cubic-bezier(0.215, 0.61, 0.355, 1) 0.3s;
+}
+
+.c-cta:hover {
+  -webkit-transform: translateY(-5px);
+          transform: translateY(-5px);
+}
+
+.c-cta:active {
+  -webkit-transform: translateY(5px);
+          transform: translateY(5px);
+  background: #0051d4;
 }
 
 .c-cta--big {
