--- a/scss/style.scss
+++ b/scss/style.scss
@@ -32,7 +32,7 @@ body {
 }
 // ? <--------- Utilities --------->
 @import './utils/wrapper';
-@import './utils/ceterer';
+@import './utils/arranger';
 // ? </--------- Utilities --------->
 
 // ? <--------- COMPONENTS --------->
