--- a/scss/style.css
+++ b/scss/style.css
@@ -42,6 +42,12 @@ body {
           justify-content: center;
 }
 
+.u-arranger--divide {
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
 .c-header {
   background: #2176ff;
   display: -webkit-box;
@@ -183,5 +189,99 @@ body {
 
 .c-calendar__cell--blue {
   background: #03a9f4;
+}
+
+.c-benefits {
+  background: white;
+  border-radius: 2px;
+  -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
+          box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
+  padding: 5px 15px;
+  width: 48%;
+}
+
+.c-benefits__title {
+  text-align: center;
+  font-size: 1.6em;
+}
+
+.c-benefits__list {
+  width: 80%;
+  margin: 0 auto;
+}
+
+.c-benefits__list-item {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 50px 1fr;
+      grid-template-columns: 50px 1fr;
+  gap: 0 10px;
+      grid-template-areas: "bullet title" ". text ";
+  margin-bottom: 15px;
+}
+
+.c-benefits__list-item__bullet {
+  -ms-grid-row: 1;
+  -ms-grid-column: 1;
+  grid-area: bullet;
+  color: #4caf50;
+  border: 2px solid;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  font-weight: bold;
+  font-size: 1.5em;
+}
+
+.c-benefits__list-item__bullet--money {
+  color: orange;
+}
+
+.c-benefits__list-item__bullet--total {
+  border: none;
+  color: red;
+}
+
+.c-benefits__list-item__title {
+  -ms-grid-row: 1;
+  -ms-grid-column: 2;
+  grid-area: title;
+  font-size: 1.4em;
+  margin: 0;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+}
+
+.c-benefits__list-item__title--money {
+  font-weight: 500;
+  color: orange;
+}
+
+.c-benefits__list-item__title--total {
+  color: red;
+  font-weight: bold;
+}
+
+.c-benefits__list-item__text {
+  -ms-grid-row: 2;
+  -ms-grid-column: 2;
+  grid-area: text;
+  margin: 0;
+}
+
+.c-benefits__alert {
+  text-align: center;
+  font-size: 1.5em;
+  font-weight: 500;
 }
 /*# sourceMappingURL=style.css.map */
