--- a/scss/style.scss
+++ b/scss/style.scss
@@ -41,4 +41,5 @@ body {
 @import './components/hero';
 @import './components/heading';
 @import './components/calendar';
+@import './components/benefits';
 // ? </--------- COMPONENTS --------->
