--- a/scss/style.css
+++ b/scss/style.css
@@ -101,6 +101,7 @@ body {
   display: inline-block;
   -webkit-transition: cubic-bezier(0.215, 0.61, 0.355, 1) 0.3s;
   transition: cubic-bezier(0.215, 0.61, 0.355, 1) 0.3s;
+  border: 2px solid #2176ff;
 }
 
 .c-cta:hover {
@@ -116,6 +117,16 @@ body {
 
 .c-cta--big {
   font-size: 2em;
+}
+
+.c-cta--hollow {
+  background: transparent;
+  color: #2176ff;
+}
+
+.c-cta--hollow:hover {
+  background: #2176ff;
+  color: white;
 }
 
 .c-hero {
@@ -198,11 +209,27 @@ body {
           box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
   padding: 5px 15px;
   width: 48%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 .c-benefits__title {
   text-align: center;
   font-size: 1.6em;
+  color: #4caf50;
+  font-weight: 500;
+}
+
+.c-benefits__title--money {
+  color: orange;
 }
 
 .c-benefits__list {
