--- a/scss/utils/_wrapper.scss
+++ b/scss/utils/_wrapper.scss
@@ -7,5 +7,5 @@
     justify-content: inherit;
     align-items: inherit;
     flex: inherit;
-    border: 1px solid red;
+    // border: 1px solid red;
 }
