--- a/scss/components/_cta.scss
+++ b/scss/components/_cta.scss
@@ -1,3 +1,5 @@
+$cta-green: #4caf50;
+
 .c-cta {
     font-size: 1.3em;
     box-sizing: initial;
@@ -33,5 +35,17 @@
             background: $color__accent-main;
             color: white;
         }
+    }
+
+    &--green {
+        background: $cta-green;
+        border-color: $cta-green;
+    }
+
+    &--green-hollow {
+        background: transparent;
+        color: $cta-green;
+        border-color: $cta-green;
+        
     }
 }
