--- a/scss/style.css
+++ b/scss/style.css
@@ -150,6 +150,17 @@ body {
   color: white;
 }
 
+.c-cta--green {
+  background: #4caf50;
+  border-color: #4caf50;
+}
+
+.c-cta--green-hollow {
+  background: transparent;
+  color: #4caf50;
+  border-color: #4caf50;
+}
+
 .c-hero {
   height: 70vh;
 }
