--- a/scss/style.css
+++ b/scss/style.css
@@ -343,4 +343,38 @@ body {
   font-size: 1.5em;
   font-weight: 500;
 }
+
+.c-map {
+  background: white;
+  border-radius: 2px;
+  -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
+          box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
+  padding: 20px 10px;
+}
+
+.c-map__title {
+  text-align: center;
+  font-size: 1.6em;
+  margin: 0;
+  color: #2176ff;
+}
+
+.c-map__address {
+  font-size: 1.3em;
+  font-weight: 500;
+  text-align: center;
+  margin: 5px 0;
+}
+
+.c-map__link {
+  display: inline-block;
+  text-align: center;
+  color: inherit;
+  font-weight: 500;
+  margin: 0 10px;
+}
+
+.c-map__link:hover {
+  color: #2176ff;
+}
 /*# sourceMappingURL=style.css.map */
