--- a/scss/style.scss
+++ b/scss/style.scss
@@ -31,6 +31,10 @@ body {
     font-family: $font;
 }
 
+// section:nth-child(even) {
+//     background: $color__body-3;
+// }
+
 #tortuga {
     background-image: url('../img/turtle.jpg');
     background-position: center;
@@ -55,4 +59,5 @@ body {
 @import './components/heading';
 @import './components/calendar';
 @import './components/benefits';
+@import './components/map';
 // ? </--------- COMPONENTS --------->
