--- a/scss/components/_calendar.scss
+++ b/scss/components/_calendar.scss
@@ -4,13 +4,15 @@ $calendar-red: #f44336;
 $calendar-green: #8bc34a;
 $calendar-blue: #03a9f4;
 .c-calendar {
-    border: 1px solid black;
+    // border: 1px solid black;
     border-radius: $border-radius;
     display: grid;
     grid-template-columns: auto 1fr 1fr;
     box-shadow: $shadow;
+    background: white;
+    padding: 10px;
     &__cell {
-        border: 1px solid black;
+        border: 1px solid #404040;
         font-size: 1.3em;
         display: flex;
         justify-content: center;
