--- a/scss/style.css
+++ b/scss/style.css
@@ -189,7 +189,6 @@ section:nth-child(even) {
 }
 
 .c-calendar {
-  border: 1px solid black;
   border-radius: 2px;
   display: -ms-grid;
   display: grid;
@@ -197,10 +196,12 @@ section:nth-child(even) {
       grid-template-columns: auto 1fr 1fr;
   -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
           box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
+  background: white;
+  padding: 10px;
 }
 
 .c-calendar__cell {
-  border: 1px solid black;
+  border: 1px solid #404040;
   font-size: 1.3em;
   display: -webkit-box;
   display: -ms-flexbox;
