Created container util & re-arranged some html to match the new specification

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -52,6 +52,7 @@ section:nth-child(even) {
 // ? <--------- Utilities --------->
 @import './utils/wrapper';
 @import './utils/arranger';
+@import './utils/container';
 // ? </--------- Utilities --------->
 
 // ? <--------- COMPONENTS --------->
