--- a/scss/components/_benefits.scss
+++ b/scss/components/_benefits.scss
@@ -7,7 +7,7 @@ $benefits-money: orange;
     border-radius: $border-radius;
     box-shadow: $shadow;
     padding: 5px 15px;
-    width: 48%;
+    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
