--- a/scss/style.css
+++ b/scss/style.css
@@ -76,6 +76,10 @@ section:nth-child(even) {
           flex-direction: row-reverse;
 }
 
+.u-container--half {
+  width: 48%;
+}
+
 .c-header {
   background: #2176ff;
   display: -webkit-box;
@@ -250,7 +254,7 @@ section:nth-child(even) {
   -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
           box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
   padding: 5px 15px;
-  width: 48%;
+  height: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
