--- a/scss/style.scss
+++ b/scss/style.scss
@@ -59,6 +59,7 @@ section:nth-child(even) {
 @import './components/header';
 @import './components/cta';
 @import './components/hero';
+@import './components/info';
 @import './components/heading';
 @import './components/calendar';
 @import './components/benefits';
