--- a/scss/style.scss
+++ b/scss/style.scss
@@ -64,4 +64,5 @@ section:nth-child(even) {
 @import './components/calendar';
 @import './components/benefits';
 @import './components/map';
+@import './components/faqs';
 // ? </--------- COMPONENTS --------->
