--- a/scss/style.css
+++ b/scss/style.css
@@ -270,6 +270,8 @@ textarea {
           flex: 1;
   -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
           box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
+  font-size: 1.2em;
+  font-weight: 500;
 }
 
 .c-header__list {
@@ -284,13 +286,13 @@ textarea {
   margin-left: 12px;
 }
 
-.c-header__item:hover {
-  text-decoration: underline;
-}
-
 .c-header__link {
   text-decoration: none;
   color: white;
+}
+
+.c-header__link:hover {
+  color: limegreen;
 }
 
 .c-cta {
