--- a/scss/style.scss
+++ b/scss/style.scss
@@ -67,4 +67,5 @@ section:nth-child(even) {
 @import './components/map';
 @import './components/faqs';
 @import './components/form';
+@import './components/footer';
 // ? </--------- COMPONENTS --------->
