--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,4 +1,3 @@
-
 // ? <--------- VARIABLES --------->
 
 // * Colors:
@@ -30,10 +29,12 @@ body {
     color: $color__text;
     font-family: $font;
 }
+
 section {
     padding: 50px 0;
 }
-section:nth-child(even) {
+
+section:nth-child(odd) {
     background: $color__body-3;
 }
 
@@ -43,12 +44,14 @@ section:nth-child(even) {
     background-size: cover;
     padding: 100px 0;
 }
+
 #guacamaya {
     padding: 100px 0;
     background-image: url('../img/guacamaya.jpg');
     background-position: center;
     background-size: cover;
 }
+
 // ? <--------- Utilities --------->
 @import './utils/wrapper';
 @import './utils/arranger';
