--- a/scss/style.css
+++ b/scss/style.css
@@ -272,6 +272,8 @@ textarea {
           box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
   font-size: 1.2em;
   font-weight: 500;
+  position: fixed;
+  width: 100%;
 }
 
 .c-header__list {
