modified cta hover behaviour

--- a/scss/components/_cta.scss
+++ b/scss/components/_cta.scss
@@ -31,10 +31,10 @@ $cta-green: #4caf50;
     &--hollow {
         background: transparent;
         color: $color__accent-main;
-        &:hover {
-            background: $color__accent-main;
-            color: white;
-        }
+        // &:hover {
+        //     background: $color__accent-main;
+        //     color: white;
+        // }
     }
 
     &--green {
