--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -8,12 +8,13 @@
     font-weight: 500;
     position: fixed;
     width: 100%;
+    
     &__list {
         display: flex;
         align-items: center;
         padding: 0;
     }
-
+    
     &__item {
         list-style: none;
         margin-left: 12px;
@@ -26,5 +27,9 @@
             // text-decoration: underline;
             color: limegreen;
         }
+    }
+    
+    @include ipad {
+        font-size: 1em;
     }
 }
