--- a/scss/style.scss
+++ b/scss/style.scss
@@ -16,6 +16,31 @@ $shadow: 0 1px 2px rgba(0,0,0,0.15);
 $border-radius: 2px;
 $font: 'Roboto', sans-serif;
 
+// * Responsive Design
+@mixin ipad {
+    @media screen and (max-width: 768px) {
+        @content;
+    }
+}
+
+@mixin iphone-8-plus {
+    @media screen and (max-width: 414px) {
+        @content;
+    }
+}
+
+@mixin iphone-x {
+    @media screen and (max-width: 375px) {
+        @content;
+    }
+}
+
+@mixin iphone-5 {
+    @media screen and (max-width: 320px) {
+        @content;
+    }
+}
+
 // ? </--------- VARIABLES --------->
 
 * {
