--- a/scss/components/_hero.scss
+++ b/scss/components/_hero.scss
@@ -2,7 +2,7 @@
     height: 70vh;
     background-image: url('../img/hero.png');
     background-size: cover;
-    background-position: left;
+    background-position: center;
     color: white;
     
     &__title {
@@ -13,5 +13,15 @@
     &__subtitle {
         font-size: 1.6em;
         text-shadow: 1px 1px rgba(0,0,0,.25);
+    }
+
+    @include iphone-8-plus {
+        font-size: 14px;
+        text-align: center;
+        height: 50vh;
+
+        &__title {
+            margin-bottom: 0;
+        }
     }
 }
