--- a/scss/components/_info.scss
+++ b/scss/components/_info.scss
@@ -10,9 +10,11 @@
         padding-left: 20px;
         align-self: center;
     }
+
     &__text {
         font-size: 1.2em;
     }
+
     &__icon {
         width: 40%;
         display: block;
@@ -22,5 +24,13 @@
 
     @include ipad {
         font-size: 14px;
+    }
+
+    @include iphone-8-plus {
+        grid-template-columns: 1fr;
+
+        &__column {
+            padding: 0 10px;
+        }
     }
 }
