--- a/scss/style.css
+++ b/scss/style.css
@@ -321,6 +321,10 @@ textarea {
   padding: 0;
 }
 
+.c-header__mobile-navbar {
+  display: none;
+}
+
 .c-header__item {
   list-style: none;
   margin-left: 12px;
@@ -335,9 +339,66 @@ textarea {
   color: limegreen;
 }
 
+.c-header__link--menu:hover {
+  color: white;
+}
+
 @media screen and (max-width: 768px) {
   .c-header {
     font-size: 1em;
+  }
+}
+
+@media screen and (max-width: 414px) {
+  .c-header__navbar {
+    font-size: 1.2em;
+    position: fixed;
+    width: 60vw;
+    height: 100vh;
+    background: #2176ff;
+    top: 0;
+    right: -60vw;
+    -webkit-transition: cubic-bezier(0.215, 0.61, 0.355, 1) 0.5s;
+    transition: cubic-bezier(0.215, 0.61, 0.355, 1) 0.5s;
+  }
+  .c-header__navbar--active {
+    right: 0;
+  }
+  .c-header__mobile-navbar {
+    display: block;
+    z-index: 999;
+  }
+  .c-header__list {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    height: 100%;
+  }
+  .c-header__mobile-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    margin: 0;
+  }
+  .c-header__item {
+    margin: 15px 0px;
+  }
+  .c-header__item:last-child {
+    display: none;
+  }
+  .c-header__mobile-item {
+    list-style: none;
+    margin: 10px;
   }
 }
 
