--- a/scss/components/_cta.scss
+++ b/scss/components/_cta.scss
@@ -62,7 +62,8 @@ $cta-green: #4caf50;
     }
 
     @include iphone-8-plus {
-        padding: 12px 10px;
+        padding: 12px 8px;
+        text-align: center;
         &--big {
             font-size: 1.5em;
         }
