--- a/scss/style.css
+++ b/scss/style.css
@@ -470,7 +470,8 @@ textarea {
 
 @media screen and (max-width: 414px) {
   .c-cta {
-    padding: 12px 10px;
+    padding: 12px 8px;
+    text-align: center;
   }
   .c-cta--big {
     font-size: 1.5em;
