--- a/scss/style.scss
+++ b/scss/style.scss
@@ -103,5 +103,6 @@ section:nth-child(odd) {
 @import './components/map';
 @import './components/faqs';
 @import './components/form';
+@import './components/blog';
 @import './components/footer';
 // ? </--------- COMPONENTS --------->
