--- a/scss/style.scss
+++ b/scss/style.scss
@@ -104,5 +104,6 @@ section:nth-child(odd) {
 @import './components/faqs';
 @import './components/form';
 @import './components/blog';
+@import './components/cta-banner';
 @import './components/footer';
 // ? </--------- COMPONENTS --------->
