Added some styles to cta-banner component

--- a/scss/utils/_wrapper.scss
+++ b/scss/utils/_wrapper.scss
@@ -7,5 +7,9 @@
     justify-content: inherit;
     align-items: inherit;
     flex: inherit;
+
+    &--blog {
+        max-width: 850px;
+    }
     // border: 1px solid red;
 }
