--- a/scss/components/_cta-banner.scss
+++ b/scss/components/_cta-banner.scss
@@ -3,22 +3,51 @@
     background: $color__accent-main--transparent;
 
     &__title {
-        font-size: 1.3em;
+        font-size: 1.4em;
+        margin-bottom: 5px;
     }
 
-    &__address{
-        
+    &__subtitle {
+        margin: 0;
     }
 
-    &__phone {
-
+    &__link{
+        margin: 0;
+        display: block;
+        color: $color__text;
+        text-decoration: none;
+        &:hover {
+            text-decoration: underline;
+        }
     }
 
     &__text {
-
+        font-size: 1.2em;
     }
 
     &__button {
+        font-size: 1.3em;
+        box-sizing: initial;
+        text-decoration: none;
+        color: white;
+        background: $color__accent-main;
+        text-transform: uppercase;
+        font-weight: 500;
+        letter-spacing: 1px;
+        padding: 12px 24px;
+        border-radius: $border-radius;
+        box-shadow: $shadow;
+        display: inline-block;
+        transition: cubic-bezier(0.215, 0.610, 0.355, 1) .3s;
+        border: 2px solid $color__accent-main; 
+        text-align: center;
+        &:hover {
+            transform: translateY(-5px);
+        }
 
+        &:active {
+            transform: translateY(5px);
+            background: darken($color__accent-main, 15%);
+        }
     }
 }
