--- a/scss/style.css
+++ b/scss/style.css
@@ -62,6 +62,10 @@ section:nth-child(odd) {
           flex: inherit;
 }
 
+.u-wrapper--blog {
+  max-width: 850px;
+}
+
 .u-arranger {
   padding: 10px 0;
   display: -webkit-box;
@@ -973,7 +977,59 @@ textarea {
 }
 
 .c-cta-banner__title {
+  font-size: 1.4em;
+  margin-bottom: 5px;
+}
+
+.c-cta-banner__subtitle {
+  margin: 0;
+}
+
+.c-cta-banner__link {
+  margin: 0;
+  display: block;
+  color: #404040;
+  text-decoration: none;
+}
+
+.c-cta-banner__link:hover {
+  text-decoration: underline;
+}
+
+.c-cta-banner__text {
+  font-size: 1.2em;
+}
+
+.c-cta-banner__button {
   font-size: 1.3em;
+  -webkit-box-sizing: initial;
+          box-sizing: initial;
+  text-decoration: none;
+  color: white;
+  background: #2176ff;
+  text-transform: uppercase;
+  font-weight: 500;
+  letter-spacing: 1px;
+  padding: 12px 24px;
+  border-radius: 2px;
+  -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
+          box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
+  display: inline-block;
+  -webkit-transition: cubic-bezier(0.215, 0.61, 0.355, 1) 0.3s;
+  transition: cubic-bezier(0.215, 0.61, 0.355, 1) 0.3s;
+  border: 2px solid #2176ff;
+  text-align: center;
+}
+
+.c-cta-banner__button:hover {
+  -webkit-transform: translateY(-5px);
+          transform: translateY(-5px);
+}
+
+.c-cta-banner__button:active {
+  -webkit-transform: translateY(5px);
+          transform: translateY(5px);
+  background: #0051d4;
 }
 
 .c-footer {
