Minor changes to footer component styles

--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -1,12 +1,12 @@
 .c-footer {
-    background: $color__body-2;
+    background: darken($color__accent-main, 35%);
     min-height: 50px;
     display: flex;
     justify-content: center;
     align-items: center;
     &__credit {
         font-weight: 500;
-        color: $color__text;
+        color: #F2F2F2;
         text-decoration: none;
         
         &:hover {
