--- a/scss/style.scss
+++ b/scss/style.scss
@@ -105,5 +105,6 @@ section:nth-child(odd) {
 @import './components/form';
 @import './components/blog';
 @import './components/cta-banner';
+@import './components/suggestions';
 @import './components/footer';
 // ? </--------- COMPONENTS --------->
