--- a/scss/style.css
+++ b/scss/style.css
@@ -1083,7 +1083,7 @@ textarea {
 }
 
 .c-footer {
-  background: #FCFCFC;
+  background: #002a6e;
   min-height: 50px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1098,7 +1098,7 @@ textarea {
 
 .c-footer__credit {
   font-weight: 500;
-  color: #404040;
+  color: #F2F2F2;
   text-decoration: none;
 }
 
