--- a/scss/style.css
+++ b/scss/style.css
@@ -306,8 +306,8 @@ textarea {
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
-  -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
-          box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
+  -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1);
+          box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1);
   font-size: 1.2em;
   font-weight: 500;
   position: fixed;
@@ -419,8 +419,8 @@ textarea {
   letter-spacing: 1px;
   padding: 12px 24px;
   border-radius: 2px;
-  -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
-          box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
+  -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1);
+          box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1);
   display: inline-block;
   -webkit-transition: cubic-bezier(0.215, 0.61, 0.355, 1) 0.3s;
   transition: cubic-bezier(0.215, 0.61, 0.355, 1) 0.3s;
@@ -521,8 +521,8 @@ textarea {
   gap: 0 10px;
   background: white;
   border-radius: 2px;
-  -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
-          box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
+  -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1);
+          box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1);
 }
 
 .c-info__column {
@@ -571,8 +571,8 @@ textarea {
   display: grid;
   -ms-grid-columns: auto 1fr 1fr;
       grid-template-columns: auto 1fr 1fr;
-  -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
-          box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
+  -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1);
+          box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1);
   background: white;
   padding: 10px;
 }
@@ -633,8 +633,8 @@ textarea {
 .c-benefits {
   background: white;
   border-radius: 2px;
-  -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
-          box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
+  -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1);
+          box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1);
   padding: 5px 15px;
   height: 100%;
   display: -webkit-box;
@@ -762,8 +762,8 @@ textarea {
 .c-map {
   background: white;
   border-radius: 2px;
-  -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
-          box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
+  -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1);
+          box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1);
   padding: 20px 10px;
 }
 
@@ -802,8 +802,8 @@ textarea {
 .c-faqs {
   background: white;
   border-radius: 2px;
-  -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
-          box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
+  -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1);
+          box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1);
   padding: 15px 20px;
 }
 
@@ -827,8 +827,8 @@ textarea {
 .c-form {
   background: white;
   border-radius: 2px;
-  -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
-          box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
+  -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1);
+          box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1);
   padding: 50px;
 }
 
@@ -1062,8 +1062,8 @@ textarea {
   letter-spacing: 1px;
   padding: 12px 24px;
   border-radius: 2px;
-  -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
-          box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
+  -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1);
+          box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1);
   display: inline-block;
   -webkit-transition: cubic-bezier(0.215, 0.61, 0.355, 1) 0.3s;
   transition: cubic-bezier(0.215, 0.61, 0.355, 1) 0.3s;
@@ -1080,6 +1080,67 @@ textarea {
   -webkit-transform: translateY(5px);
           transform: translateY(5px);
   background: #0051d4;
+}
+
+.c-suggestions {
+  padding: 25px 0;
+}
+
+.c-suggestions__title {
+  font-weight: 500;
+}
+
+.c-suggestions__cards-container {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[4];
+      grid-template-columns: repeat(4, 1fr);
+  gap: 15px;
+}
+
+.c-card {
+  border-radius: 8px;
+  overflow: hidden;
+  background: white;
+  -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1);
+          box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1);
+  position: relative;
+  border: 1px solid transparent;
+  -webkit-transition: all .3s;
+  transition: all .3s;
+}
+
+.c-card:hover {
+  border-color: #0791e6;
+  -webkit-box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2);
+          box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2);
+}
+
+.c-card__link {
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+}
+
+.c-card__cover {
+  width: 100%;
+  height: 80px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: center;
+     object-position: center;
+}
+
+.c-card__text-container {
+  width: 90%;
+  margin: 0 auto;
+}
+
+.c-card__title {
+  color: #2176ff;
+  font-weight: 500;
 }
 
 .c-footer {
