--- a/scss/style.scss
+++ b/scss/style.scss
@@ -12,7 +12,8 @@ $color__text: #404040;
 $color__text--light: #828382;
 
 // * UI Element Styles
-$shadow: 0 1px 2px rgba(0,0,0,0.15);
+$shadow: 0 4px 8px 0 rgba(0,0,0,0.1);
+$shadow--hover: 0 2px 4px 0 rgba(0,0,0,0.2);
 $border-radius: 2px;
 $font: 'Roboto', sans-serif;
 
@@ -106,5 +107,6 @@ section:nth-child(odd) {
 @import './components/blog';
 @import './components/cta-banner';
 @import './components/suggestions';
+@import './components/card';
 @import './components/footer';
 // ? </--------- COMPONENTS --------->
