--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -11,6 +11,10 @@
     z-index: 9;
     top: 0;
 
+    &__logo {
+        width: 80px;
+    }
+
     &__list {
         display: flex;
         align-items: center;
