fixed blog cover image route

--- a/scss/components/_blog.scss
+++ b/scss/components/_blog.scss
@@ -4,7 +4,7 @@
         display: flex;
         align-items:  center;
         text-align: center;
-        background-image: linear-gradient(rgba(0,0,0,.55),rgba(0,0,0,.55)), url("../../img/car-engine.jpg");
+        background-image: linear-gradient(rgba(0,0,0,.55),rgba(0,0,0,.55)), url("../img/car-engine.jpg");
         background-size: cover;
         background-position: center;
         color: white;
