--- a/scss/style.css
+++ b/scss/style.css
@@ -949,8 +949,8 @@ textarea {
       -ms-flex-align: center;
           align-items: center;
   text-align: center;
-  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.55)), to(rgba(0, 0, 0, 0.55))), url("../../img/car-engine.jpg");
-  background-image: linear-gradient(rgba(0, 0, 0, 0.55), rgba(0, 0, 0, 0.55)), url("../../img/car-engine.jpg");
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.55)), to(rgba(0, 0, 0, 0.55))), url("../img/car-engine.jpg");
+  background-image: linear-gradient(rgba(0, 0, 0, 0.55), rgba(0, 0, 0, 0.55)), url("../img/car-engine.jpg");
   background-size: cover;
   background-position: center;
   color: white;
