--- a/scss/style.css
+++ b/scss/style.css
@@ -953,9 +953,12 @@ textarea {
   background-image: linear-gradient(rgba(0, 0, 0, 0.55), rgba(0, 0, 0, 0.55)), url("../img/car-engine.jpg");
   background-size: cover;
   background-position: center;
-  color: white;
-  font-size: 1.5em;
   min-height: 330px;
+}
+
+.c-blog__title {
+  color: white;
+  font-size: 3em;
 }
 
 .c-blog__body {
@@ -1023,6 +1026,24 @@ textarea {
   margin: 0 0 1em 0;
   line-height: 1.6em;
   color: #606164;
+}
+
+@media screen and (max-width: 414px) {
+  .c-blog {
+    font-size: 11px;
+  }
+  .c-blog__cover {
+    min-height: 200px;
+  }
+  .c-blog__list-item {
+    gap: 0;
+  }
+  .c-blog__list-item__bullet {
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+    line-height: 1.6em;
+  }
 }
 
 .c-cta-banner {
