--- a/scss/style.css
+++ b/scss/style.css
@@ -314,6 +314,9 @@ textarea {
   width: 100%;
   z-index: 9;
   top: 0;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .c-header__logo {
